# Swiftlet

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  grammar_reference.md
.github/workflows/: python-publish.yml
benches/: benchmark.rs  get_terminals.rs
crates/re-parser/: Cargo.toml  README.md
crates/re-parser/examples/: ast_visitor.rs  basic_parsing.rs  char_classes.rs  groups.rs  quantifiers.rs  real_world_patterns.rs  width.rs
crates/re-parser/src/: ast.rs  error.rs  lib.rs  parser.rs  width.rs
crates/swiftlet/: Cargo.toml
crates/swiftlet/benches/: benchmark.rs  get_terminals.rs
crates/swiftlet/examples/: alias_rule.rs  ambiguity_grammar.rs  benchmark_parse.rs  calculate.rs  clr_conflict_grammar.rs  clr_math.rs  clr_parser.rs  common_terminal_decimal.rs  dotenv_config.rs  error_grammar.rs  gr_alias_rule.rs  gr_alternatives.rs  gr_grouping.rs  gr_ignore.rs  gr_import.rs  gr_optional.rs  gr_range.rs  gr_regex_flags.rs  gr_regular_expression.rs  gr_repetition_operators.rs  gr_rule.rs  gr_string_literals.rs  gr_terminals.rs  grammar.rs  grammar_test.rs  grammar_testing.rs  grammar_testing_slr.rs  http_protocol.rs  import_grammar.rs  import_terminal.rs  join_terminals.rs  json_parse.rs  lexer_imp.rs  math.rs  maybe_grammar.rs  plus_grammar.rs  range_grammar.rs  regex_grammar.rs  small_grammar.rs  sql_column_expr.rs  (+3 more)
crates/swiftlet/src/: ast.rs  builder.rs  common.rs  engine.rs  error.rs  grammar.rs  lexer.rs  lib.rs  load_grammar.rs  macros.rs  parser_frontends.rs  preclude.rs  transform.rs
crates/swiftlet/src/parser/: clr.rs  earley.rs  error.rs  mod.rs  utils.rs
crates/swiftlet/tests/: common.rs  plus_int_grammar_test.rs  rule_feature_in_grammar_test.rs  simple_grammar_test.rs  test_coverage.rs  test_error.rs  test_rule.rs  test_small_project.rs  test_terminal.rs
examples/: alias_grammar.rs  ambiguity_grammar.rs  calculate.rs  clr_conflict_grammar.rs  clr_math.rs  clr_parser.rs  error_grammar.rs  grammar.rs  grammar_test.rs  grammar_testing.rs  grammar_testing_slr.rs  import_grammar.rs  json_parse.rs  math.rs  maybe_grammar.rs  plus_grammar.rs  range_grammar.rs  regex_grammar.rs  small_grammar.rs  symbol_priority.rs
pyswiftlet/: Cargo.toml  README.md  pyproject.toml
pyswiftlet/examples/: calculate.py  context_aware_token.py  gr_alternatives.py  gr_grouping.py  gr_ignore.py  gr_import.py  gr_optional.py  gr_regex_flags.py  gr_regular_expression.py  gr_repetition_operators.py  gr_rule.py  gr_string_literals.py  gr_terminals.py  json_parser.py  lark_ex.py  sql_column_expr.py  sql_query_parser.py
pyswiftlet/notebooks/: Notebook.ipynb  comparison.ipynb  lark_perf.py  swiftlet.ipynb
pyswiftlet/python/swiftlet/: __init__.py
pyswiftlet/src/: lib.rs
pyswiftlet/tests/: helpers.py  test_bindings.py  test_error.py  test_rule.py  test_small_project.py  test_terminal.py
src/: builder.rs  common.rs  grammar.rs  lexer.rs  lib.rs  load_grammar.rs  macros.rs  parser_frontends.rs  transform.rs
src/parser/: clr.rs  earley.rs  error.rs  mod.rs  utils.rs
swiftlet/: Cargo.toml  README.md
swiftlet/notebooks/: comparison.ipynb  swiftlet.ipynb
swiftlet/python/swiftlet/: __init__.py
swiftlet/tests/: test_bindings.py
tests/: plus_int_grammar_test.rs  rule_feature_in_grammar_test.rs  simple_grammar_test.rs
