[workspace]
members = ["crates/*", "swiftlet"]
resolver = "3"


[workspace.dependencies]
swiftlet = {path="crates/swiftlet"}
pyo3 = { version = "0.28.2", features = ["extension-module", "pyo3-macros"] }
fancy-regex = { version = "0.17.0" }
indexmap = { version = "2.11.0" }
thiserror = { version = "2.0.16" }
chrono = {version="0.4"}


[profile.samply]
inherits = "release"
debug = true
