[build-system]
requires = ["maturin>=1.12.0,<2.0"]
build-backend = "maturin"

[project]
name = "swiftlet"
version = "0.1.4"
description = "Swiftlet provides Python bindings for Swiftlet, a high-performance parsing library built in Rust. It accepts an EBNF-style grammar and parses input text into a tree of Tree and Token nodes."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"

[tool.maturin]
bindings = "pyo3"
python-source = "python"
module-name = "swiftlet._swiftlet"
